Fixed issue with Completed date-time not being displayed properly on smaller displays

--- a/src/app/assessment-list/assessment-list.component.scss
+++ b/src/app/assessment-list/assessment-list.component.scss
@@ -1,24 +1,32 @@
 .assessment-button {
   margin-left: 5em;
   width: 11.25em;
+  position: relative;
+  right: 0px;
 }
 
 .completed-label {
   font-size: .9em;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .flex {
   flex: 1 1 auto;
 }
 
-.info {
-      width: 85%;
-}
-
 .selected {
   color: #607D88;
   background-color: #DDD;
   left: .1em;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .assessment:hover {
